--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
 </head>
 
 <body>
-    <h1>This is food network</h1>
+    <!-- header section start -->
+    <section class="header container">
+        <div class="first-width">
+            <h1> <span class="color"> Skip </span>The Diet,</h1>
+            <h1>Just Eat Healthy </h1>
+            <h1>With Food Network</h1>
+            <p>Having a healthy diet means making food choices that contribute to short- and long-term health.</p>
+            <a class="link_btn" target="_blank" href="https://github.com/FatemaAkter11">Order Food</a>
+        </div>
+        <div class="first-width">
+            <img src="images/female/Diet.png" alt="">
+        </div>
+    </section>
+    <!-- header section end -->
+
+    <!-- About section start -->
+    <section class="about container">
+        <div class="first-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="first-width">
+            <h2>About Me</h2>
+            <p>Hello there!
+                This is Fatema Akter . I'm currently doing my BSC in Computer Science & Engineering from Daffodil
+                International University.
+                I always remember one sentence : "No challenges, No success".I have taken up the challenge of increasing
+                my skills. I do believe I will succeed in my challenge. So, I keep practicing all the time because
+                "Practice Makes a Man Perfect".</p>
+            <a class="link_btn" target="_blank" href="https://www.linkedin.com/in/akter-fatema/">Contact Me</a>
+
+        </div>
+    </section>
+    <!-- About section end -->
 </body>
 
 </html>
