--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
     <!-- header section start -->
     <section class="header container">
-        <div class="first-width">
-            <h1> <span class="color"> Skip </span>The Diet,</h1>
+        <div class="half-width">
+            <h1> <span class="skip-color"> Skip </span>The Diet,</h1>
             <h1>Just Eat Healthy </h1>
             <h1>With Food Network</h1>
             <p>Having a healthy diet means making food choices that contribute to short- and long-term health.</p>
             <a class="link_btn" target="_blank" href="https://github.com/FatemaAkter11">Order Food</a>
         </div>
-        <div class="first-width">
+        <div class="half-width">
             <img src="images/female/Diet.png" alt="">
         </div>
     </section>
@@ -32,10 +32,10 @@
 
     <!-- About section start -->
     <section class="about container">
-        <div class="first-width">
+        <div class="half-width">
             <img src="images/female/Person Image.png" alt="">
         </div>
-        <div class="first-width">
+        <div class="half-width">
             <h2>About Me</h2>
             <p>Hello there!
                 This is Fatema Akter . I'm currently doing my BSC in Computer Science & Engineering from Daffodil
@@ -48,6 +48,66 @@
         </div>
     </section>
     <!-- About section end -->
+
+    <!-- recepies section start  -->
+    <section>
+        <div class="menu-team">
+            <h2>My recipies</h2>
+            <p>Love Food Network shows, chefs and recipes?
+                <br> Find the best recipe ideas, videos​, healthy eating advice,
+                party ideas and cooking techniques.
+            </p>
+        </div>
+
+        <div class="menu-item container">
+            <div id="menu-list1">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Recipie Title</h3>
+                <p>In my food-network company provide healthy food.Healthy foods are those that provide with the
+                    nutrients you need to sustain your body's well-being and retain energy. </p>
+            </div>
+            <div id="menu-list1">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Recipie Title</h3>
+                <p>In my food-network company provide healthy food.Healthy foods are those that provide with the
+                    nutrients you need to sustain your body's well-being and retain energy.</p>
+            </div>
+            <div id="menu-list1">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Recipie Title</h3>
+                <p>In my food-network company provide healthy food.Healthy foods are those that provide with the
+                    nutrients you need to sustain your body's well-being and retain energy.</p>
+            </div>
+        </div>
+    </section>
+    <!-- recepies section end -->
+    <!-- extra part start -->
+    <section class="container">
+        <div class="extra-menu container">
+            <div id="extra-item">
+                <h1>700k</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div id="extra-item">
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div id="extra-item">
+                <h1>100k</h1>
+                <p>Dribbble Shot Like</p>
+            </div>
+        </div>
+    </section>
+    <!-- extra part end -->
+
+    <!-- footer section start -->
+
+    <footer>
+        <h1> <span class="color">FOOD</span> NETWORK</h1>
+        <p id="size">Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
+    <!-- footer section end -->
+
 </body>
 
 </html>
